fixing white background on overflow

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html,body {
+  background-color: #141414;
+}
+
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
